--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
 
     defaultConfig {
         applicationId "com.gurpster.github"
-        minSdkVersion 16
+        minSdkVersion 19
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -69,10 +69,13 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.4.0'
 
     implementation 'com.jakewharton.rxbinding4:rxbinding:4.0.0'
-    implementation "com.jakewharton.rxbinding2:rxbinding-kotlin:2.0.0"
+    implementation 'com.jakewharton.rxbinding4:rxbinding-material:4.0.0'
+    implementation 'com.jakewharton.rxbinding4:rxbinding-appcompat:4.0.0'
+//    implementation "com.jakewharton.rxbinding2:rxbinding-kotlin:2.0.0"
+//    implementation 'com.jakewharton.rxbinding3:rxbinding-appcompat:3.0.0'
 
     implementation 'io.reactivex.rxjava2:rxjava:2.2.19'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 
     implementation 'com.android.support:multidex:1.0.3'
 
