--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,27 +4,25 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-<!--    <meta-data-->
-<!--        android:name="android.app.default_searchable"-->
-<!--        android:value="com.gurpster.github.ui.activities.MainActivity" />-->
-
     <application
         android:name=".App"
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
+        android:supportsRtl="false"
+        android:screenOrientation="portrait"
         android:theme="@style/Theme.GitHub">
         <activity android:name=".ui.activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-<!--            <meta-data-->
-<!--                android:name="android.app.searchable"-->
-<!--                android:resource="@xml/searchable" />-->
         </activity>
+        <activity
+            android:label="@string/app_name"
+            android:theme="@style/Theme.GitHub"
+            android:name=".ui.activities.RepoDetailsActivity"/>
     </application>
 
 </manifest>
